<resources>
    <string name="app_name">Project007</string>
    <string name="title_home">Home</string>
    <string name="title_subscription">Subscription</string>
    <string name="title_profile">Profile</string>
    <string name="add_name_hint">Enter your experiment name.</string>
    <string name="add_region_hint">Enter your experiment region.</string>

    <string name="add_description_hint">Enter your experiment description</string>
    <string name="add_date_hint">Choose your experiment date</string>
    <string name="name">Experiment name</string>
    <string name="description">Experiment description</string>
    <string name="date">Experiment date</string>
    <string name="trails">Experiment trails</string>
    <string name="rate">Experiment rate</string>
    <string name="edit_experiment">Edit Experiment</string>
    <string name="add_success">Add Success</string>
    <string name="add_failure">Add Failure</string>
    <string name="delete_experiment">Delete Experiment</string>
    <string name="save">Confirm</string>
    <string name="pick_date">XXXX-XX-XX</string>
    <string name="type">Experiment type</string>
    <string name="trail">Trail#</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">Experiment id</string>
    <string name="delete">Delete</string>

    <string name="choose_type_hint">Type: </string>
    <string name="add_minimumTrails_hint">Enter your Minimum Trails number </string>
    <string name="generate_type">Generate Type</string>
    <string name="fab1">FAB1</string>
    <string name="fab2">FAB2</string>
    <string name="choosetype">ChooseType</string>

</resources>