<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShowDetail"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<TextView
        android:id="@+id/name_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:padding ="5dp"/>

    <TextView
        android:id="@+id/description_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:padding ="5dp" />

    <TextView
        android:id="@+id/date_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:padding ="5dp"/>
    <TextView
        android:id="@+id/trails_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trails"
        android:padding ="5dp"/>

    <TextView
        android:id="@+id/rate_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:padding ="5dp"/>

</LinearLayout>