<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ModifyExperimentFragment">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:hint="@string/add_name_hint"
        android:inputType="textPersonName"
        android:textSize="20sp"

        android:autofillHints="true"/>

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="true"
        android:maxLength="40"
        android:textSize="20sp"

        android:hint="@string/add_description_hint"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_date_hint"
        android:textSize="20sp"
        android:autofillHints="true"
        android:editable="false"
        tools:ignore="Deprecated" />

    <EditText
        android:id="@+id/editTextType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_date_hint"
        android:textSize="20sp"

        android:autofillHints="true"/>

</LinearLayout>